# URSC---Python-Training

./: .gitignore  README.md  requirements.txt
customscripts/: current_environment.py
day1/notebooks/: day1session1.ipynb  day1session2.ipynb  day1session3.ipynb  day1session4.ipynb
day2/notebooks/: beginner_projects_session4.ipynb  beginners_closures_decorators.ipynb  day2session1.ipynb  day2session2.ipynb  day2session3.ipynb  day2session4.ipynb
day2/notebooks/notes/: hello.txt
day2/src/: main.py  mainargs.py
day2/src/example/: mathematical.py  printing.py
day2/src/module_example/: main.py  (+1 more)
day2/src/published_package/: README.md  pyproject.toml
day2/src/published_package/stringcase_utils/: __init__.py  converters.py
day2/src/published_package/stringcase_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day2/src/published_package/tests/: test_converters.py
day3/notebooks/: complex_data.pkl  context_log.txt  data.pkl  day3session1.ipynb  day3session2.ipynb  day3session3.ipynb  day3session4.ipynb  device_config.json  fake_file.txt  my_file.txt  my_notes.txt  oops.ipynb  sensor_log.txt  sensor_readings.csv
day4/notebooks/: day4session1.ipynb  day4session2.ipynb  day4session3.ipynb  day4session4.ipynb  telemetry_data.csv
day4/src/: dashboard.py
day5/notebooks/: bengaluru_weather.csv  day5session1.ipynb  day5session2.ipynb  day5session3.ipynb  day5session4.ipynb  sriharikota_weather.csv
day5/src/: binaryvsjson.py
mini_projects/day1/: error_code_lookup.py  resistance_calc.py  sensor_classify.py
src/: download_packages.py  raw_requirements.txt
(+26 files in other folders)
